--- a/DoRAEC_BoD1.html
+++ b/DoRAEC_BoD1.html
@@ -73,7 +73,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1291375501117489343/output-onlinepngtools.png" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1291375501117489343/output-onlinepngtools.png?ex=66ffdea8&is=66fe8d28&hm=c602f6c79350319d5ede974594990c8710d2cf5486aea09762354d840ffc55cb&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
     </div>
