--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="ELP-1739" class="login-button">Login</a></li>
+                <li><a href="ELP-1739.html" class="login-button">Login</a></li>
             </ul>
         </nav>
     </header>
