--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <body>
     <header>
         <nav>
-            <div class="logo">SCP Project</div>
+            <div class="logo">Armed Research & Containment Site - Omegon</div>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="ELP-1739.html" class="login-button">Login</a></li>
             </ul>
@@ -36,23 +33,33 @@
         <section id="features" class="features">
             <h2>Key Features</h2>
             <ul>
-                <li>Explore unique SCP containment facilities</li>
-                <li>Interact with various SCP entities</li>
-                <li>Engage in thrilling missions and tasks</li>
-                <li>Collaborate with other players to contain breaches</li>
-                <li>Regular updates with new SCPs and content</li>
+                <li>Explore the facility</li>
+                <li>Interact with various SCPs</li>
+                <li>Engage in thrilling missions and tasks as a Mobile Task Force Operative</li>
+                <li>Collaborate with other personnel to contain breaches</li>
+                <li>Regular updates with new content</li>
+                <li>Active Community</li>
+                <li>XBOX ONLY</li>
+                <li>Professional Roleplays</li>
+                <li>Mature Game Moderation Team members</li>
             </ul>
         </section>
 
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
-            <p>Have questions or suggestions? Reach out to us!</p>
-            <a href="mailto:contact@scpproject.com" class="contact-button">Email Us</a>
+            <p>Have questions or suggestions regarding the website? Reach out to us!</p>
+            <a href="scpf.site.omegon.web.dev@tidio.xyz" class="contact-button">Email Us</a>
+
+            <p>Have questions or suggestions regarding the Game? Reach out to us!</p>
+            <a href="scpf.site.omegon.game.dev@tidio.xyz" class="contact-button">Email Us</a>
+
+            <p>Have legal requests? Reach out to us!</p>
+            <a href="legal.site.omegon@tidio.xyz" class="contact-button">Email Us</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 SCP Project. All rights reserved.</p>
+        <p>&copy; 2024 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Abacromby230 in the United States</p>
     </footer>
 </body>
 </html>
