--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to SCP Project</h1>
-            <p>Explore the mysterious world of SCP in this thrilling Roblox experience!</p>
+            <h1>Welcome to Armed Research & Containment Site - Omegon</h1>
+            <p>join, get trained, do your job, HAVE A FUN TIME!</p>
             <a href="#" class="cta-button">Play Now</a>
         </section>
 
         <section id="about" class="about">
-            <h2>About SCP Project</h2>
-            <p>SCP Project is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena.</p>
+            <h2>About Armed Research & Containment Site - Omegon</h2>
+            <p>Armed Research & Containment Site - Omegon is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena, or get trained and become the best in your field</p>
         </section>
 
         <section id="features" class="features">
@@ -48,13 +48,13 @@
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
             <p>Have questions or suggestions regarding the website? Reach out to us!</p>
-            <a href="scpf.site.omegon.web.dev@tidio.xyz" class="contact-button">Email Us</a>
+            <a href="scpf.site.omegon.web.dev@tidio.xyz" class="contact-button">Email our Website Developers</a>
 
             <p>Have questions or suggestions regarding the Game? Reach out to us!</p>
-            <a href="scpf.site.omegon.game.dev@tidio.xyz" class="contact-button">Email Us</a>
+            <a href="scpf.site.omegon.game.dev@tidio.xyz" class="contact-button">Email our Game Developers</a>
 
             <p>Have legal requests? Reach out to us!</p>
-            <a href="legal.site.omegon@tidio.xyz" class="contact-button">Email Us</a>
+            <a href="legal.site.omegon@tidio.xyz" class="contact-button">Email our Legal Team</a>
         </section>
     </main>
 
