--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCP Project | Roblox Experience</title>
+    <title> A.R.A.C Site - Omegon | Roblox Experience</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Armed Research & Containment Site - Omegon</div>
+            <div class="logo">Armed Research & Containment Site-Omegon</div>
             <ul>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="ELP-1739.html" class="login-button">Login</a></li>
