--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Foundation OS Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,15 +52,15 @@
             MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
 
             // FSD users
-            FSDuser1: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            FSDuser2: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://sites.google.com/view/site-omegon/' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://sites.google.com/view/site-omegon/' },
             FSDuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             // ... Add all 125 FSD users here
             FSDuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
 
             // DoRAEC users
             DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://sites.google.com/view/site-omegon/DoRAEC_BoD_001' },
-            DoRAECuser2: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            DoRAEC_JREM_Goof { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
             DoRAECuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             // ... Add all 50 DoRAEC users here
             DoRAECuser50: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
