--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -34,9 +34,21 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        #error-message {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: red;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            display: none;
+        }
     </style>
 </head>
 <body>
+    <div id="error-message"></div>
     <form id="loginForm">
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
@@ -45,46 +57,12 @@
 
     <script>
         const users = {
-            // MTF users
-            MTF_A-1_Op_Crab: { password: 'Mobile Task Force Alpha-1_Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
-            MTF_E-11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
-            MTFuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            // User data omitted for brevity
+        };
 
-            // FSD users
-            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://sites.google.com/view/site-omegon/' },
-            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://sites.google.com/view/site-omegon/' },
-            FSDuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            // ... Add all 125 FSD users here
-            FSDuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-
-            // DoRAEC users
-            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://sites.google.com/view/site-omegon/DoRAEC_BoD_001' },
-            DoRAEC_JREM_Goof { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
-            DoRAECuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            // ... Add all 50 DoRAEC users here
-            DoRAECuser50: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-
-            // O5 users
-            'O5-2': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-3': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-4': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-5': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-6': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-7': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-8': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-9': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-10': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-11': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-12': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-13': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-        },
-        // ...ISD users
-        'ISDLeadSuprvsr_Zuhhttv': { password: 'Internal Security Department Lead Supervisor Zuhhttv', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
-        'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https//sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
-
-        // ... OOTA SECRETARY User(s)
-        'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://sites.google.com/view/site-omegon/AD-OOTA-food35-1739' };
+        let loginAttempts = 0;
+        const maxAttempts = 3;
+        const redirectUrl = 'https://testurl.com/';
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -93,10 +71,17 @@
 
             if (users[username] && users[username].password === password) {
                 alert('Credentials authorized, redirecting to the epo');
-                // Redirect to the user-specific URL
                 window.location.href = users[username].redirect;
             } else {
-                alert('Invalid credentials. Please try again. If this persists email us at site.omegon.website.dev@tidio.xyz in order to reset password or request a reminder.');
+                loginAttempts++;
+                const errorMessage = document.getElementById('error-message');
+                errorMessage.textContent = `Error code: 401 - Invalid credentials (${maxAttempts - loginAttempts} attempts remaining)`;
+                errorMessage.style.display = 'block';
+
+                if (loginAttempts >= maxAttempts) {
+                    alert('Maximum login attempts reached. Redirecting to the test URL.');
+                    window.location.href = redirectUrl;
+                }
             }
         });
     </script>
