--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -57,7 +57,7 @@
 
     <script>
         const users = {
-            // User data omitted for brevity
+            
         };
 
         let loginAttempts = 0;
@@ -79,8 +79,10 @@
                 errorMessage.style.display = 'block';
 
                 if (loginAttempts >= maxAttempts) {
-                    alert('Maximum login attempts reached. Redirecting to the test URL.');
+                    alert('Maximum login attempts reached. Standby for a directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
                     window.location.href = redirectUrl;
+                    
+                    //This file was created and coded by Abacromby230, the Chief Executive Officer of Abacromby Studios, and project lead for ARAC S-O
                 }
             }
         });
