--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -57,11 +57,49 @@
 
     <script>
         const users = {
-            
+            MTF_A-1_Op_Crab: { password: 'Mobile Task Force Alpha-1_Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
+            MTF_E-11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
+            MTFuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+
+            // FSD users
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://sites.google.com/view/site-omegon/' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://sites.google.com/view/site-omegon/' },
+            FSDuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            // ... Add all 125 FSD users here
+            FSDuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+
+            // DoRAEC users
+            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://sites.google.com/view/site-omegon/DoRAEC_BoD_001' },
+            DoRAEC_JREM_Goof { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
+            DoRAECuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            // ... Add all 50 DoRAEC users here
+            DoRAECuser50: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+
+            // O5 users
+            'O5-2': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-3': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-4': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-5': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-6': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-7': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-8': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-9': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-10': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-11': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-12': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            'O5-13': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+        },
+        // ...ISD users
+        'ISDLeadSuprvsr_Zuhhttv': { password: 'Internal Security Department Lead Supervisor Zuhhttv', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
+        'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https//sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
+
+        // ... OOTA SECRETARY User(s)
+        'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://sites.google.com/view/site-omegon/AD-OOTA-food35-1739' }; 
         };
 
         let loginAttempts = 0;
-        const maxAttempts = 3;
+        const maxAttempts = 4;
         const redirectUrl = 'https://testurl.com/';
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
