--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -57,7 +57,7 @@
 
     <script>
         const users = {
-            MTF_A-1_Op_Crab: { password: 'Mobile Task Force Alpha-1_Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
+            MTF_A-1_Op_Crab: { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
             MTF_E-11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
             MTFuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
