--- a/Resh-1-SoC.html
+++ b/Resh-1-SoC.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dept of Regulations & Ethics Committee BoD Office 1</title>
+    <title>Mobile Task Force Resh-1 ("Seat of Consciousness") Terminal</title>
     <style>
         body {
             background-color: #000;
@@ -104,24 +104,21 @@ SCP-EPO Booting up
 Terminal booted
 
  
-
-                                                        > login BoD.DORAC.The_Law_Bringer
-
-LOGGING IN…
+                                                                    > login Resh_one.MobileTaskForce.Seat.of.Consciousness 
+LOGGING IN
+.
+.
+.
 
 PLEASE ENTER PASSWORD.
-
      
-
-                                           > pass EC.ED.delta.omicron.redrum.Kilo-67.1739                                                            
-
-
+                                                                    > pass Romeo.Echo.Charlie.Helios.One.SoC.Head_Heart_Stomach 
 
 
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Bringer"
+Welcome Mobile Task Force Resh-1 ("Seat of Consciousness")
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
