--- a/Alpha-1-RRH-Terminal.html
+++ b/Alpha-1-RRH-Terminal.html
@@ -105,26 +105,27 @@ Terminal booted
 
  
 
-                                                        > login BoD.DORAC.The_Law_Bringer
-
-LOGGING IN…
+                    > login Alpha_one.MobileTaskForce.RedRightHand
+LOGGING IN
+.
+.
+.
 
 PLEASE ENTER PASSWORD.
-
      
-
-                                           > pass EC.ED.delta.omicron.redrum.Kilo-67.1739                                                            
-
-
+                                                                       > pass Alpha.Lima.Phoenix.Helios.Alpha.One.RRH.Vengeance
 
 
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Bringer"
+Welcome Mobile Task Force ALPHA-1 ("Red Right Hand")
 
-YOU HAVE NO NEW NOTIFICATION(S)
+YOU HAVE 1 NEW NOTIFICATION
 
+Re: Assignment to an Overseer's O.S
+
+Your being assigned to O5-1's Protective Detail. You will be flown to Armed Research And Containment Site 01 then O5-1 will be flown alongside you to Armed Research & Containment Site Omegon. After immediate contact with -1 Oath of Silence will take place.
 `;
 
         let index = 0;
