--- a/Alpha-1-RRH-Terminal.html
+++ b/Alpha-1-RRH-Terminal.html
@@ -73,7 +73,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1291375501117489343/output-onlinepngtools.png?ex=66ffdea8&is=66fe8d28&hm=c602f6c79350319d5ede974594990c8710d2cf5486aea09762354d840ffc55cb&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1268900835237036054/1275441667662413888/B298D7BB-EB58-4E62-B1E9-42B93DD80A37.jpg?ex=6715011e&is=6713af9e&hm=0f72fe39612bea8d310a7e62d273ed0e54128b39a3a0d4c9278626faea046685&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
     </div>
