--- a/Epsilon-11-NTF-Terminal.html
+++ b/Epsilon-11-NTF-Terminal.html
@@ -105,7 +105,7 @@ Terminal booted
 
  
 
-                                                                                  > login Alpha_one.MobileTaskForce.RedRightHand
+                                                         > login Epsilons_eleven.MobileTaskForce.nine.tailed.fox 
 LOGGING IN
 .
 .
@@ -113,19 +113,16 @@ LOGGING IN
 
 PLEASE ENTER PASSWORD.
      
-                       > pass Alpha.Lima.Phoenix.Helios.Alpha.One.RRH.Vengeance
+                                                    > pass echo.phoenix.sierra.india.lima.omega.november.e11.ntf 
 
 
 
 LOGGING IN…
 
-Welcome Mobile Task Force ALPHA-1 ("Red Right Hand")
+Welcome Mobile Task Force Epsilon-11 ("Nine Tailed Fox")
 
-YOU HAVE 1 NEW NOTIFICATION
+YOU HAVE NO NEW NOTIFICATION(S)
 
-Re: Assignment to an Overseer's O.S
-
-Your being assigned to O5-1's Protective Detail. You will be flown to Armed Research And Containment Site 01 then O5-1 will be flown alongside you to Armed Research & Containment Site Omegon. After immediate contact with -1 Oath of Silence will take place.
 `;
 
         let index = 0;
