--- a/Epsilon-11-NTF-Terminal.html
+++ b/Epsilon-11-NTF-Terminal.html
@@ -105,7 +105,7 @@ Terminal booted
 
  
 
-                                               > login Epsilons_eleven.MobileTaskForce.nine.tailed.fox 
+                                   > login Epsilons_eleven.MobileTaskForce.nine.tailed.fox 
 LOGGING IN
 .
 .
@@ -113,7 +113,7 @@ LOGGING IN
 
 PLEASE ENTER PASSWORD.
      
-                                          > pass echo.phoenix.sierra.india.lima.omega.november.e11.ntf 
+                       > pass echo.phoenix.sierra.india.lima.omega.november.e1even.ntf 
 
 
 
