--- a/index.html
+++ b/index.html
@@ -8,40 +8,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script>
-        // Request permission to show notifications
-        async function requestNotificationPermission() {
-            try {
-                // Check if the Notification API is supported
-                if (Notification.permission !== 'granted') {
-                    await Notification.requestPermission();
-                }
-                console.log("Notification permission granted.");
-            } catch (error) {
-                console.error("Failed to request notification permission:", error);
-            }
+        // Check if browser is Microsoft Edge
+        function isEdge() {
+            return navigator.userAgent.indexOf("Edg") != -1;
         }
 
-        // Request permission to redirect the user
-        async function requestRedirectPermission() {
-            try {
-                // Check if the Permissions API is supported
-                if (navigator.permissions) {
-                    await navigator.permissions.query({ name: 'navigation' });
-                    console.log("Redirect permission granted.");
-                } else {
-                    // Fallback for browsers without the Permissions API
-                    console.log("Redirect permission not supported.");
+        // Request permissions only for Edge
+        if (isEdge()) {
+            async function requestPermissions() {
+                try {
+                    if (Notification.permission !== 'granted') {
+                        await Notification.requestPermission();
+                    }
+                    
+                    if (navigator.permissions) {
+                        await navigator.permissions.query({ name: 'navigation' });
+                    }
+                    console.log("Edge permissions requested successfully");
+                } catch (error) {
+                    console.log("Permission request handled");
                 }
-            } catch (error) {
-                console.error("Failed to request redirect permission:", error);
             }
+            
+            // Execute permission requests
+            requestPermissions();
         }
-
-        // Example usage
-        requestNotificationPermission();
-        requestRedirectPermission();
     </script>
 </head>
+
     <header>
         <nav>
             <div class="logo">Armed Research & Containment Site-Omegon</div>
