--- a/index.html
+++ b/index.html
@@ -1,93 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A.R.A.C Site - Omegon | Roblox Experience</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+document.getElementById('loginForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    const username = document.getElementById('username').value;
+    const password = document.getElementById('password').value;
 
-    <script>
-        // Check if browser is Microsoft Edge
-        function isEdge() {
-            return navigator.userAgent.indexOf("Edg") != -1;
+    if (users[username] && users[username].password === password) {
+        alert('Credentials authorized, redirecting to the epo');
+        setTimeout(() => {
+            window.location.href = users[username].redirect;
+        }, 1000);
+    } else {
+        loginAttempts++;
+        const errorMessage = document.getElementById('error-message');
+        errorMessage.textContent = `Error code: 401 - Invalid credentials (${maxAttempts - loginAttempts} attempts remaining)`;
+        errorMessage.style.display = 'block';
+
+        if (loginAttempts >= maxAttempts) {
+            alert('Maximum login attempts reached. Standby for a directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
+            setTimeout(() => {
+                window.location.href = redirectUrl;
+            }, 1000);
         }
+    }
+});
 
-        // Request permissions only for Edge
-        if (isEdge()) {
-            async function requestPermissions() {
-                try {
-                    if (Notification.permission !== 'granted') {
-                        await Notification.requestPermission();
-                    }
-                    
-                    if (navigator.permissions) {
-                        await navigator.permissions.query({ name: 'navigation' });
-                    }
-                    console.log("Edge permissions requested successfully");
-                } catch (error) {
-                    console.log("Permission request handled");
-                }
-            }
-            
-            // Execute permission requests
-            requestPermissions();
-        }
-    </script>
-</head>
-
-    <header>
-        <nav>
-            <div class="logo">Armed Research & Containment Site-Omegon</div>
-            <ul>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="ELP-1739.html" class="login-button">Login</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="home" class="hero">
-            <h1>Welcome to Armed Research & Containment Site-Omegon</h1>
-            <p>join, get trained, do your job, HAVE A FUN TIME!</p>
-            <a href="#" class="cta-button">Play Now</a>
-        </section>
-
-        <section id="about" class="about">
-            <h2>About Armed Research & Containment Site - Omegon</h2>
-            <p>Armed Research & Containment Site - Omegon is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena, or get trained and become the best in your field</p>
-        </section>
-
-        <section id="features" class="features">
-            <h2>Key Features</h2>
-            <ul>
-                <li>Explore the facility</li>
-                <li>Interact with various SCPs</li>
-                <li>Engage in thrilling missions and tasks as a Mobile Task Force Operative</li>
-                <li>Collaborate with other personnel to contain breaches</li>
-                <li>Regular updates with new content</li>
-                <li>Active Community</li>
-                <li>XBOX ONLY</li>
-                <li>Professional Roleplays</li>
-                <li>Mature Game Moderation Team members</li>
-            </ul>
-        </section>
-
-        <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions or suggestions regarding the website? Reach out to us!</p>
-            <a href="scpf.site.omegon.web.dev@tidio.xyz" class="contact-button">Email our Website Developers</a>
-
-            <p>Have questions or suggestions regarding the Game? Reach out to us!</p>
-            <a href="scpf.site.omegon.game.dev@tidio.xyz" class="contact-button">Email our Game Developers</a>
-
-            <p>Have legal requests? Reach out to us!</p>
-            <a href="legal.site.omegon@tidio.xyz" class="contact-button">Email our Legal Team</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Abacromby230 in the United States</p>
-    </footer>
-</body>
-</html>
