--- a/index.html
+++ b/index.html
@@ -1,25 +1,5 @@
-document.getElementById('loginForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
+    RESTRICTED ACCESS DUE TO DEVELOPMENT. PLEASE TRY AGAIN LATER.
 
-    if (users[username] && users[username].password === password) {
-        alert('Credentials authorized, redirecting to the epo');
-        setTimeout(() => {
-            window.location.href = users[username].redirect;
-        }, 1000);
-    } else {
-        loginAttempts++;
-        const errorMessage = document.getElementById('error-message');
-        errorMessage.textContent = `Error code: 401 - Invalid credentials (${maxAttempts - loginAttempts} attempts remaining)`;
-        errorMessage.style.display = 'block';
+    ERROR 9001: SERVER OUTAGE FOR MAINTENANCE.
 
-        if (loginAttempts >= maxAttempts) {
-            alert('Maximum login attempts reached. Standby for a directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
-            setTimeout(() => {
-                window.location.href = redirectUrl;
-            }, 1000);
-        }
-    }
-});
-
+    
